Update progress bar messaging logic and appearance.
- Fixes dashboard breach stat margins when there is no progress bar or breach resolution messaging being shown.

- Hides breach resolution intro messaging until the user has at least one found breach.

--- a/views/partials/dashboards/breaches-dash.hbs
+++ b/views/partials/dashboards/breaches-dash.hbs
@@ -6,7 +6,7 @@
       <div class="dash-stats">
         {{> breach-stats addClasses="user-stats"}}
       </div>
-
+      {{#if progressBar}}
       <div class="progress-bar-wrapper">
         {{#if progressBar.progressStatus}}
           <div class="flx space-between h-padding">
@@ -26,6 +26,7 @@
           </div>
         {{/if}}
       </div>
+    {{/if}}
     </div>
   </main>
 {{/getBreachStats}}
