--- a/public/css/breach-stats.css
+++ b/public/css/breach-stats.css
@@ -47,6 +47,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: calc(var(--padding) * 4);
 }
 
 .resolved-breach-indicator,
@@ -67,7 +68,7 @@
 }
 
 .progress-bar-wrapper {
-  margin: calc(var(--padding) * 4) auto;
+  margin-bottom: calc(var(--padding) * 4);
 }
 
 .progress-bar {
